@@ -72,6 +72,8 @@ Version CVS HEAD (?)
       part 10 being a drumkit part and all other ones chromatic parts), in
       LS however one can switch between the first 16 MIDI instrument maps
       defined for the sampler
+    - made it possible to create multiple sample channels even if the
+      audio thread isn't running
 
   * LSCP server:
     - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
